# TDengine-build

./: .gitignore  CMakeLists.txt
.github/workflow/: build.yml
.github/workflows/: build.yml
cmd/conn/: CMakeLists.txt  main.c
cmd/insert/: CMakeLists.txt  main.c
cmd/query/: CMakeLists.txt  main.c
cmd/stmt2_async_exec/: CMakeLists.txt  main.c
cmd/stmt2_bind/: CMakeLists.txt  main.c
cmd/stmt2_query/: CMakeLists.txt  main.c
tests/: index.py  monitor.py
tools/: CMakeLists.txt
tools/include/: tools.h
tools/src/: tools.c
